# daneel-ai

./: LICENSE  README.md  pyproject.toml
docs/: overview.md
src/daneel/: __init__.py  clients.py  config.py  graph_builder.py  models.py  nodes.py  service.py  tooling.py
tests/: test_assistant.py
