[project]
name = "daneel"
version = "0.1.0"
description = "Daneel assistant service skeleton with LangGraph orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.6.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]
graph = ["langgraph>=0.0.56"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
